Fix overlapping of request pop-up

--- a/project/project/static/css/menu.css
+++ b/project/project/static/css/menu.css
@@ -166,10 +166,13 @@ body {
 
 .form-popup {
   display: none;
-  position: relative;
-  bottom: 0;
+  float: right;
+  margin-top: 30px;
+  margin-right: 146px;
   border: 3px solid #f1f1f1;
-
+  z-index: 10;
+  top: 28px;
+  right: 230px;
   text-align: center;
 }
 
